<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background6"
    tools:context=".authentication.ForgetPassword">

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_app"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/font_indigo_daisy"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/forget_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/font_indigo_daisy"
        android:gravity="center_horizontal"
        android:text="@string/forget_password_reset"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetPasswordEmailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_title"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_for_resetting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_edittext_custom"
            android:fontFamily="@font/font_roboto_regular"
            android:hint="@string/resetting_password"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/resetPasswordEmailInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/font_roboto_regular"
        android:text="@string/reset_password"
        android:textColor="@android:color/white" />

</RelativeLayout>