<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/notifications_option_read_unread_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button_gradient_blue_black"
                android:fontFamily="@font/font_roboto_regular"
                android:padding="6dp"
                android:text="@string/mark_as_read"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/notifications_option_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notifications_option_read_unread_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button_gradient_blue_black"
                android:fontFamily="@font/font_roboto_regular"
                android:padding="6dp"
                android:text="@string/delete"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/notifications_option_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notifications_option_delete_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_button_gradient_blue_black"
                android:fontFamily="@font/font_roboto_regular"
                android:padding="6dp"
                android:paddingEnd="20dp"
                android:text="@string/close"
                android:textColor="@android:color/white"  />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>